[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kmeans-tjdwill"
dynamic = ["version"]
authors = [
    {name = "Terrance Williams", email = "tjdwill.gh@gmail.com"},
]
description = "A function-based implementation of k-means clustering that maintains data association."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy", "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["k-means", "clustering", "data analysis", "data processing", "linear algebra", "robotics", "computer vision"]

[project.urls]
Homepage = "https://github.com/tjdwill/kmeans"
Issues = "https://github.com/tjdwill/kmeans/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kmeans-tjdwill/kmeans"]

[tool.hatch.version]
path = "src/kmeans-tjdwill/kmeans/__init__.py"